[tool.poetry]
name = "hyperdiv"
version = "0.1.4"
description = "Build reactive web UIs in pure Python"
authors = ["Marius Nita <m@mariusnita.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["hyperdiv", "reactive", "ui", "web", "framework"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.9"
tornado = "^6.1"
xxhash = "^3.0.0"
click = "^8.1.3"
cachetools = "^5.3.0"
mistune = "^2.0.5"
Jinja2 = "^3.1.2"
termcolor = "^2.3.0"
email-validator = "^2.0.0"
frozendict = "^2.3.10"
parse = "^1.20.0"
pygments = "^2.17.2"

[tool.poetry.scripts]
hyperdiv = "hyperdiv.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
mypy = "^0.961"
ipython = "^8.4.0"
types-cachetools = "^5.3.0"
websocket-client = "^1.7.0"
requests = "^2.31.0"
types-requests = "^2.31.0.20240106"
flake8 = "^7.0.0"
black = "^22.6.0"

[tool.pytest.ini_options]
addopts = "--cov=hyperdiv --cov-report=term-missing --capture=no --verbose"
testpaths = ["hyperdiv"]
python_files = ["*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">= 3.9"
